--- a/P1-regression/sample.ipynb
+++ b/P1-regression/sample.ipynb
@@ -12,18 +12,20 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "from sklearn.linear_model import LinearRegression, BayesianRidge\n",
-    "from sklearn.ensemble import RandomForestRegressor\n",
+    "from sklearn.ensemble import RandomForestRegressor, AdaBoostRegressor\n",
     "from sklearn.neural_network import MLPRegressor\n",
     "import sklearn.model_selection as ms\n",
     "from rdkit import DataStructs\n",
     "from rdkit import Chem\n",
     "from rdkit.Chem import AllChem\n",
-    "from rdkit.Chem.Fingerprints import FingerprintMols"
+    "from rdkit.Chem.Fingerprints import FingerprintMols\n",
+    "from rdkit.Chem import Descriptors as de\n",
+    "import itertools"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -484,6 +486,69 @@
   {
    "cell_type": "code",
    "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# test_train = df_train.sample(n=1000)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# \"\"\"\n",
+    "# Example Feature Engineering\n",
+    "\n",
+    "# this calculates the length of each smile string and adds a feature column with those lengths\n",
+    "# Note: this is NOT a good feature and will result in a lower score!\n",
+    "# \"\"\"\n",
+    "# #smiles_len = np.vstack(df_all.smiles.astype(str).apply(lambda x: len(x)))\n",
+    "# #df_all['smiles_len'] = pd.DataFrame(smiles_len)\n",
+    "# convert_to_mol = np.vectorize(Chem.MolFromSmiles)\n",
+    "\n",
+    "# def get_descriptors(mol):\n",
+    "#     return [de.ExactMolWt(mol), de.HeavyAtomCount(mol), de.HeavyAtomMolWt(mol), de.NHOHCount(mol), de.NOCount(mol), de.NumHAcceptors(mol), de.NumHDonors(mol), de.NumHeteroatoms(mol), de.NumRotatableBonds(mol), de.NumValenceElectrons(mol)]\n",
+    "\n",
+    "# def convert_fp(smile):\n",
+    "#     m = Chem.MolFromSmiles(smile)\n",
+    "#     # http://www.rdkit.org/docs/GettingStartedInPython.html#fingerprinting-and-molecular-similarity\n",
+    "#     return AllChem.GetMorganFingerprintAsBitVect(m,2,nBits=512)\n",
+    "\n",
+    "# getBitVector = lambda x: x.ToBitString()\n",
+    "# getBitVector = np.vectorize(getBitVector)\n",
+    "\n",
+    "# mols = pd.DataFrame(test_train['smiles'].apply(Chem.MolFromSmiles))\n",
+    "# descriptors = mols['smiles'].apply(get_descriptors)\n",
+    "# df = pd.DataFrame(descriptors).rename(index=str, columns={\"smiles\": \"descriptors\"})\n",
+    "# splitted = df['descriptors'].apply(lambda x: pd.Series(list((x))))\n",
+    "# splitted = splitted.rename(index=str, columns={0: \"ExactMolWt\", 1:\"HeavyAtomCount\", 2:\"HeavyAtomMolWt\", 3:\"NHOHCount\", 4:\"NOCount\", 5:\"NumHAcceptors\", 6:\"NumHDonors\", 7: \"NumHeteroatoms\", 8: \"NumRotatableBonds\", 9: \"NumValenceElectrons\" })\n",
+    "# splitted.index = test_train.index\n",
+    "# test_train = pd.concat([test_train, splitted], axis = 1)\n",
+    "# # test_train.fillna(0, inplace = True)\n",
+    "\n",
+    "# # test_train = df_train.drop(['smiles'], axis=1)\n",
+    "# # # split training set into validation set to check rmse\n",
+    "# # X_train, X_validate, y_train, y_validate = ms.train_test_split(test_train, Y_train, test_size=0.2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# print(test_train)\n",
+    "# splitted.dropna(axis = 0,how = \"any\", inplace = True)\n",
+    "# test_train.dropna(axis = 0,how = \"any\", inplace = True)\n",
+    "# print(splitted.shape)\n",
+    "# print(test_train.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -504,10 +569,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 10,
+   "metadata": {},
    "outputs": [],
    "source": [
     "\"\"\"\n",
@@ -518,20 +581,32 @@
     "\"\"\"\n",
     "#smiles_len = np.vstack(df_all.smiles.astype(str).apply(lambda x: len(x)))\n",
     "#df_all['smiles_len'] = pd.DataFrame(smiles_len)\n",
-    "def convert_fp(smile):\n",
-    "    m = Chem.MolFromSmiles(smile)\n",
+    "def convert_fp(m):\n",
     "    # http://www.rdkit.org/docs/GettingStartedInPython.html#fingerprinting-and-molecular-similarity\n",
-    "    return AllChem.GetMorganFingerprintAsBitVect(m,2,nBits=512)\n",
+    "    return AllChem.GetMorganFingerprintAsBitVect(m,2,nBits=2048)\n",
+    "\n",
+    "def get_descriptors(mol):\n",
+    "    return [de.ExactMolWt(mol), de.HeavyAtomCount(mol), de.HeavyAtomMolWt(mol), de.NHOHCount(mol), de.NOCount(mol), de.NumHAcceptors(mol), de.NumHDonors(mol), de.NumHeteroatoms(mol), de.NumRotatableBonds(mol), de.NumValenceElectrons(mol)]\n",
     "\n",
     "getBitVector = lambda x: x.ToBitString()\n",
-    "getBitVector = np.vectorize(getBitVector)\n",
     "\n",
-    "fingerprints = getBitVector(pd.DataFrame(df_train['smiles'].apply(convert_fp))['smiles'].values)\n",
-    "df = pd.DataFrame(fingerprints, columns = ['fp'])\n",
+    "\n",
+    "mols = pd.DataFrame(df_train['smiles'].apply(Chem.MolFromSmiles))\n",
+    "\n",
+    "fingerprints = mols['smiles'].apply(convert_fp)\n",
+    "df = pd.DataFrame(fingerprints).rename(index=str, columns={\"smiles\": \"fp\"})\n",
     "splitted = df['fp'].apply(lambda x: pd.Series(list((x))))\n",
     "splitted.index = df_train.index\n",
     "df_train = pd.concat([df_train, splitted], axis = 1)\n",
-    "df_train.fillna(0, inplace = True)\n",
+    "\n",
+    "# descriptors = mols['smiles'].apply(get_descriptors)\n",
+    "# df = pd.DataFrame(descriptors).rename(index=str, columns={\"smiles\": \"descriptors\"})\n",
+    "# splitted = df['descriptors'].apply(lambda x: pd.Series(list((x))))\n",
+    "# splitted = splitted.rename(index=str, columns={0: \"ExactMolWt\", 1:\"HeavyAtomCount\", 2:\"HeavyAtomMolWt\", 3:\"NHOHCount\", 4:\"NOCount\", 5:\"NumHAcceptors\", 6:\"NumHDonors\", 7: \"NumHeteroatoms\", 8: \"NumRotatableBonds\", 9: \"NumValenceElectrons\" })\n",
+    "# splitted.index = df_train.index\n",
+    "# df_train = pd.concat([df_train, splitted], axis = 1)\n",
+    "\n",
+    "\n",
     "\n",
     "df_train = df_train.drop(['smiles'], axis=1)\n",
     "# split training set into validation set to check rmse\n",
@@ -540,7 +615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
@@ -561,7 +636,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def rmse(predictions, actual):\n",
+    "    return (np.sum((predictions - actual)**2) / len(predictions))**.5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -574,7 +661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -587,18 +674,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "# for i in np.arange(130, 800, 10):\n",
-    "#     MLP = MLPRegressor(hidden_layer_sizes=(i,))\n",
-    "#     MLP.fit(X_train, y_train)\n",
-    "#     MLP_pred = MLP.predict(X_validate)\n",
-    "#     print (\"layer size: %d\" % i)\n",
-    "#     print (\"RMSE: %f\" % rmse(MLP_pred, y_validate))\n"
+    "for i in np.arange(30, 1200, 20):\n",
+    "    MLP = MLPRegressor(hidden_layer_sizes=(i))\n",
+    "    MLP.fit(X_train, y_train)\n",
+    "    MLP_pred = MLP.predict(X_validate)\n",
+    "    print (\"layer size: %d\" % i)\n",
+    "    print (\"RMSE: %f\" % rmse(MLP_pred, y_validate))\n"
    ]
   },
   {
@@ -612,20 +697,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "MLP = MLPRegressor(hidden_layer_sizes=(700))\n",
+    "MLP = MLPRegressor(hidden_layer_sizes=(2000,700))\n",
     "MLP.fit(X_train, y_train)\n",
     "MLP_pred = MLP.predict(X_validate)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -638,32 +723,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "def rmse(predictions, actual):\n",
-    "    return (np.sum((predictions - actual)**2) / len(predictions))**.5"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.165154827006\n",
-      "0.166880157598\n",
-      "0.134588620739\n",
-      "0.163752584811\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(rmse(LR_pred, y_validate))\n",
     "print(rmse(RF_pred, y_validate))\n",
@@ -673,126 +735,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "MLPRegressor(activation='relu', alpha=0.0001, batch_size='auto', beta_1=0.9,\n",
-       "       beta_2=0.999, early_stopping=False, epsilon=1e-08,\n",
-       "       hidden_layer_sizes=700, learning_rate='constant',\n",
-       "       learning_rate_init=0.001, max_iter=200, momentum=0.9,\n",
-       "       nesterovs_momentum=True, power_t=0.5, random_state=None,\n",
-       "       shuffle=True, solver='adam', tol=0.0001, validation_fraction=0.1,\n",
-       "       verbose=False, warm_start=False)"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "MLP = MLPRegressor(hidden_layer_sizes=(700))\n",
-    "MLP.fit(df_train, Y_train)"
+    "def meanboost(pred_array):\n",
+    "    min_rmse = float('inf')\n",
+    "    for i in range(1, len(pred_array) + 1):\n",
+    "        for comb in itertools.combinations(pred_array, i):\n",
+    "            sum_rmse = np.zeros(len(pred_array[0]))\n",
+    "            for predictor in comb:\n",
+    "                sum_rmse = sum_rmse + predictor\n",
+    "            sum_rmse = sum_rmse / i\n",
+    "            sum_rmse = rmse(sum_rmse, y_validate)\n",
+    "            if sum_rmse < min_rmse:\n",
+    "                min_rmse = sum_rmse\n",
+    "    return min_rmse\n",
+    "\n",
+    "meanboost([LR_pred,ridge_pred, RF_pred, MLP_pred])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "10000\n",
-      "20000\n",
-      "30000\n",
-      "40000\n",
-      "50000\n",
-      "60000\n",
-      "70000\n",
-      "80000\n",
-      "90000\n",
-      "100000\n",
-      "110000\n",
-      "120000\n",
-      "130000\n",
-      "140000\n",
-      "150000\n",
-      "160000\n",
-      "170000\n",
-      "180000\n",
-      "190000\n",
-      "200000\n",
-      "210000\n",
-      "220000\n",
-      "230000\n",
-      "240000\n",
-      "250000\n",
-      "260000\n",
-      "270000\n",
-      "280000\n",
-      "290000\n",
-      "300000\n",
-      "310000\n",
-      "320000\n",
-      "330000\n",
-      "340000\n",
-      "350000\n",
-      "360000\n",
-      "370000\n",
-      "380000\n",
-      "390000\n",
-      "400000\n",
-      "410000\n",
-      "420000\n",
-      "430000\n",
-      "440000\n",
-      "450000\n",
-      "460000\n",
-      "470000\n",
-      "480000\n",
-      "490000\n",
-      "500000\n",
-      "510000\n",
-      "520000\n",
-      "530000\n",
-      "540000\n",
-      "550000\n",
-      "560000\n",
-      "570000\n",
-      "580000\n",
-      "590000\n",
-      "600000\n",
-      "610000\n",
-      "620000\n",
-      "630000\n",
-      "640000\n",
-      "650000\n",
-      "660000\n",
-      "670000\n",
-      "680000\n",
-      "690000\n",
-      "700000\n",
-      "710000\n",
-      "720000\n",
-      "730000\n",
-      "740000\n",
-      "750000\n",
-      "760000\n",
-      "770000\n",
-      "780000\n",
-      "790000\n",
-      "800000\n",
-      "810000\n",
-      "820000\n",
-      "830000\n"
+      "0.119269794946\n"
      ]
     }
    ],
+   "source": [
+    "ADR = AdaBoostRegressor(base_estimator=MLP)\n",
+    "ADR.fit(X_train, y_train)\n",
+    "ADR_pred = ADR.predict(X_validate)\n",
+    "print(rmse(ADR_pred, y_validate))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "MLP = MLPRegressor(hidden_layer_sizes=(2000,700))\n",
+    "MLP.fit(df_train, Y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "MLP_pred = np.zeros((len(df_test)))\n",
     "for i in np.arange(0, len(df_test) + 1, 10000):\n",
@@ -810,7 +807,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -825,7 +822,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
